--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
 	--purple: #7c22c5;
 	--magenta: #e91e8c;
 	--orange: #ff6b35;
-	--gradient-bg: linear-gradient(135deg, #000116 0%, #030411 100%);
+	--gradient-bg: linear-gradient(135deg, #07010d 0%, #08010d 100%);
 	--mini-action-focus-thickness: 2px;
 }
 
